--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     margin: auto;
     color: white;
     font-family: myFont;
+    font-size: 13px;
 }
 
 #left_pannel{
@@ -24,11 +25,33 @@
     text-align: center;
 }
 
-#left_pannel img{
+#profile_image{
     width: 50%;
     border: solid thin white;
     border-radius: 50%;
     margin: 10px;
+}
+
+#left_pannel label{
+    width: 100%;
+    height: 20px;
+    display: block;
+    background-color: #404b56;
+    border-bottom:solid thin #ffffff55;
+    cursor: pointer;
+    padding: 5px;
+    transition: all 1s ease;
+}
+
+#left_pannel label:hover{
+   
+    background-color: #778593;
+    
+}
+
+#left_pannel label img{
+    float: right;
+    width: 25px;
 }
 
 #user_wrap{
@@ -68,5 +91,14 @@
     background-color: #f2f7f8;
     flex: 2;
     min-height: 430px;
+    transition: all 2s ease;
+}
+
+#radio_contacts:checked ~ #inner_right_pannel{
+    flex: 0;
+}
+
+#radio_settings:checked ~ #inner_right_pannel{
+    flex: 0;
 }
 
